--- a/frames/src/main/res/values/colors.xml
+++ b/frames/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="toast_stroke_gray">#99d4d4d4</color>
+    <color name="colorPrimary">#3F51B5</color>
 </resources>
